# imgpdf-tool

./: README.md  app.py  pyproject.toml  requirements.txt
core/: pdf_utils.py
pages/: compress_pdf.py  images_to_pdf.py  merge_pdfs.py  organize_pdf.py  page_numbers.py  pdf_to_images.py  protect_pdf.py  rotate_pdf.py  split_pdf.py  unlock_pdf.py  watermark.py
